--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
+
 
     <application
         android:allowBackup="true"
@@ -16,7 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".rating"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".splashscree">
             <intent-filter>
@@ -25,10 +21,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".services.myfirebaseinstanceservices">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+<service android:name=".services.notificationservice"
+    android:label="@string/app_name">
+    <intent-filter>
+        <action android:name="com.techno.techntecky.services.notificationservice"/>
+        <category android:name="android.intent.category.DEFAULT"/>
+    </intent-filter>
+</service>
+
+
+
     </application>
 
 </manifest>
