--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,15 +12,17 @@ android {
         applicationId "com.techno.techntecky"
         minSdkVersion 17
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.3"
+        versionCode 6
+        versionName "2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,9 +32,11 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-messaging:20.2.0'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.webkit:webkit:1.3.0-alpha03'
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    implementation 'androidx.webkit:webkit:1.3.0-beta01'
     implementation 'com.github.hotchemi:android-rate:1.0.1'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
