--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.techno.techntecky">
+    package="com.techno.techntecky" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".Activities.LoginActivity" />
+        <activity android:name=".Activities.HomeActivity" />
+        <activity android:name=".Activities.Register" />
+       <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".splashscree">
+        <activity android:name=".splashscree" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.myfirebaseinstanceservices">
+
+        <service android:name=".services.myfirebaseinstanceservices" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
@@ -30,16 +38,16 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-<service android:name=".services.notificationservice"
-    android:label="@string/app_name">
-    <intent-filter>
-        <action android:name="com.techno.techntecky.services.notificationservice"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-    </intent-filter>
-</service>
 
+        <service
+            android:name=".services.notificationservice"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.techno.techntecky.services.notificationservice" />
 
-
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
